--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@ Build **Anything** with Widgets -->
     <h1>About Me</h1>
 
     <p>My name is Matthew and I am a final year physics student at Imperial College London.</p>
-<p>I am interested in the application of tools from phyiscs and other mathematical frameworks to understand the natural world. In the future I hope to learn more about biological systems and other complex systems.</p>
+<p>I am interested in the application of tools from physics and other mathematical frameworks to understand the natural world. In the future I hope to learn more about biological systems and other complex systems.</p>
 
 
     <div class="row">
